package proto_rank;

// 命令字
enum Proto_RANK_CS_CMD {
  ////////////////////////////////1200-1220rank///////////////////////////////////////////////
  NF_CS_GET_COMMON_RANK_REQ	  = 1200;
  NF_CS_GET_COMMON_RANK_RSP	  = 1201;
  ////////////////////////////////rank///////////////////////////////////////////////
}

message RankInfo
{
  optional int32                    rank            = 1;
  optional uint64                   user_id         = 2;
  optional string                   user_name       = 3;
  optional uint64										score						= 4;
  optional uint32                   face_id         = 5;
}

////////////////////////////////rank///////////////////////////////////////////////
//NF_CS_GET_COMMON_RANK_REQ	  = 1200;
message Proto_CSGetCommonRankReq
{
  optional int32 rank_type = 1; //1 gold
  optional int32 rank_from = 2;
  optional int32 rank_to	 = 3;
}

//NF_CS_GET_COMMON_RANK_RSP	  = 1201;
message Proto_SCGetCommonRankRsp
{
  optional int32 result = 1;
  optional int32 rank_type = 2; //1 gold
  repeated RankInfo rank_list         = 3;
  required int32	my_rank           = 4; //0表示没有排名，最高排名5000
  required uint64	my_score           = 5;
  required int32	rank_max          = 6;
}
////////////////////////////////rank///////////////////////////////////////////////